--- a/Resources/Private/Translations/en/Main.xlf
+++ b/Resources/Private/Translations/en/Main.xlf
@@ -387,6 +387,14 @@
 				<source>Total loss:</source>
 			</trans-unit>
 
+			<trans-unit id="statement.lossValue">
+				<source>Loss Value</source>
+			</trans-unit>
+
+			<trans-unit id="statement.lossFeePerBottle">
+				<source>Loss fee per bottle</source>
+			</trans-unit>
+
 			<trans-unit id="statement.completeStatement">
 				<source>Complete Statement</source>
 			</trans-unit>
